Fix description "jump-from-side"

--- a/stylus/style.styl
+++ b/stylus/style.styl
@@ -150,6 +150,8 @@ h1, h2, h3, h4, h5, h6
     max-height 0
     opacity 0
 
+    padding 0 1rem
+
     max-width 600px
     margin 0 auto
 
